tests/semantic_errors/files/proj6_man_semanticError_arrayTypeChecking.c
int main () {
    int a[2] = {1.0, 2.0};
}